Game Header fixed on mobile and desktop; always will fit screen

--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -1,10 +1,6 @@
 #root {
   margin: 0;
-  padding: 0;
   width: 100vw;
-  height: 100vh;
-  overflow-x: hidden;
-  overflow-y: scroll;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -13,17 +9,7 @@
   background-color: #1e1e1e;
   font-family: Arial, sans-serif;
   color: #f4f4f4;
-}
-
-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 98vw;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  left: 0;
+  padding-top: 90px;
 }
 
 #bet {
@@ -39,13 +25,6 @@ header {
   justify-content: space-around;
 }
 
-#sign-out,
-#sign-in {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-}
-
 #bet-output button {
   background-color: gray;
 }
@@ -54,8 +33,8 @@ button {
   background-color: #1a1a1a;
 }
 
-h1 {
-  color: #ffcc00;
-  margin-bottom: 1rem;
-  font-size: 40px;
+@media screen and (min-width: 800px) {
+  #root {
+    padding-top: 110px;
+  }
 }
