--- a/src/Components/Craps.css
+++ b/src/Components/Craps.css
@@ -1,5 +1,4 @@
 #everything {
-  margin-top: 10vh;
   display: flex;
   flex-direction: row;
   gap: 5vw;
