--- a/src/Components/Poker.css
+++ b/src/Components/Poker.css
@@ -4,7 +4,6 @@
   align-items: center;
   gap: 5vw;
   padding: 5vh;
-  margin-top: 70vh;
 }
 
 #game-table {
