--- a/src/Components/Roulette.css
+++ b/src/Components/Roulette.css
@@ -4,7 +4,6 @@
   justify-content: space-around;
   align-items: center;
   gap: 100px;
-  margin-top: 20vh;
   padding: 1vh;
 }
 
